--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    
+
     <div class="title">
         <h1>Dasmoto's Arts & Crafts</h1>
     </div>
@@ -21,7 +21,7 @@
         <p>
             Made of the highest quality oak, Hacksaw brushes are known for their
             eight and ability to hold paint in large amounts. Available in different
-            sizes. <span class="brush-cost"> at $3.00 / brush.</span>
+            sizes <span class="brush-cost"> at $3.00 / brush.</span>
         </p>
     </div>
 
@@ -30,7 +30,8 @@
         <img src="./Resources/images/frames.jpeg">
         <h3>Art Frames (assorted)</h3>
         <p>
-            Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.
+            Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded
+            and painted according to your needs.
             <span class="frame-cost"> Starting at $2.00 / frame.</span>
         </p>
     </div>
@@ -39,7 +40,9 @@
         <h2 class="paint-title">Paint</h2>
         <img src="./Resources/images/finnish.jpeg">
         <h3>Clean Finnish Paint</h3>
-        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class="paint-cost"> Starting at $5.00 / tube.</span>
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean
+            Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span
+                class="paint-cost"> Starting at $5.00 / tube.</span>
         </p>
         </p>
     </div>
